@@ -100,8 +100,8 @@ class SiteCreationMainVM @Inject constructor(
         wizardManager.showNextStep()
     }
 
-    fun onSiteDesignSelected(siteDesign: String, segmentId: Long?) {
-        siteCreationState = siteCreationState.copy(siteDesign = siteDesign, segmentId = segmentId)
+    fun onSiteDesignSelected(siteDesign: String) {
+        siteCreationState = siteCreationState.copy(siteDesign = siteDesign)
         wizardManager.showNextStep()
     }
 
